--- a/styles.css
+++ b/styles.css
@@ -13,16 +13,16 @@ body {
       rgba(28, 28, 30, 0.86) 100%
     ),
     url(background.png), lightgray 50% / cover no-repeat;
-    overflow: hidden;
-    scrollbar-width: none;
+  overflow: hidden;
+  scrollbar-width: none;
 }
 ::-webkit-scrollbar {
   display: none;
 }
-.level{
+.level {
   width: 376px;
 }
-.column{
+.column {
   display: flex;
   flex-direction: column;
 }
@@ -420,6 +420,7 @@ body {
   flex-direction: column;
   align-items: flex-start;
   gap: 8px;
+  width: 100%;
   align-self: stretch;
 }
 .products_row {
@@ -550,4 +551,520 @@ body {
   font-weight: 600;
   line-height: 22px; /* 129.412% */
   letter-spacing: -0.408px;
+}
+
+.mymodal {
+  position: fixed; /* фиксированное положение */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5); /* фон */
+  z-index: 1050;
+  opacity: 0; /* по умолчанию модальное окно прозрачно */
+  -webkit-transition: opacity 200ms ease-in;
+  -moz-transition: opacity 200ms ease-in;
+  transition: opacity 200ms ease-in; /* анимация перехода */
+  pointer-events: none; /* элемент невидим для событий мыши */
+  margin: 0;
+  padding: 0;
+}
+/* При отображении модального окно */
+.mymodal:target {
+  opacity: 1; /* делаем окно видимым */
+  pointer-events: auto; /* элемент видим для событий мыши */
+  overflow-y: auto; /* добавляем прокрутку по y, когда элемент не помещается на страницу */
+}
+/* ширина модального окна и его отступы от экрана */
+.mymodal-dialog {
+  position: relative;
+  margin-top: 20px;
+  width: auto;
+}
+@media (min-width: 576px) {
+  .mymodal-dialog {
+    max-width: 500px;
+    margin: 30px auto; /* отображение окна по центру */
+  }
+}
+/* Стили для блока с контентом окна */
+.mymodal-content {
+  position: relative;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background: var(--gray-05-dark, #1c1c1e);
+  backdrop-filter: blur(40px);
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.3rem;
+  outline: 0;
+}
+@media (min-width: 768px) {
+  .mymodal-content {
+    -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  }
+}
+/* Стили заголовка окна */
+.mymodal-header {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 15px;
+}
+.mymodal-title {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: var(--label-color-dark-primary, #fff);
+
+  /* Default/Bold/Title2 */
+  font-family: SF Pro Display;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 127.273% */
+  letter-spacing: 0.35px;
+}
+/* Стили кнопки "х" ("Закрыть")  */
+.close {
+  float: right;
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+  text-decoration: none;
+}
+/* Стили для закрывающей кнопки в фокусе или наведении */
+.close:focus,
+.close:hover {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.75;
+}
+/* Стили блока основного содержимого окна */
+.mymodal-body {
+  position: relative;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  padding: 15px;
+  overflow: auto;
+  height: 600px;
+}
+.closing_button {
+  display: flex;
+  width: 30px;
+  height: 30px;
+  padding: 7.48px 7.13px 6.52px 6.87px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  background: var(--system-background-dark-elevated-secondary, #2c2c2e);
+}
+.dostavka_content {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: flex-start;
+  justify-content: space-between;
+  height: 100%;
+}
+#advance_help {
+  color: var(--White, #ececec);
+
+  /* Default/Regular/Body */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+  margin-bottom: 24px;
+}
+.gray_input {
+  padding: 11px 16px 11px 0px;
+  border-radius: 16px;
+  width: 100%;
+  background: #282828;
+  border-style: none;
+  outline: none;
+  color: var(--label-color-dark-secondary, rgba(235, 235, 245, 0.6));
+
+  /* Default/Regular/Body */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+  text-indent: 20px;
+}
+.track_info {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 16px;
+  background: #2c2c2e;
+}
+.track_info_header {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Headline */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+}
+.track_info_addrstate {
+  color: var(--gray-01-dark, #8e8e93);
+
+  /* Default/Bold/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.5px;
+}
+.track_info_state {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.5px;
+}
+#main_product_info {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 16px;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 12px;
+  background: var(--gray-05-dark, #1c1c1e);
+}
+#main_info_product_name {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Title2 */
+  font-family: SF Pro Display;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 28px; /* 127.273% */
+  letter-spacing: 0.35px;
+}
+#currency_choose {
+  border-style: none;
+  background: transparent;
+  color: var(--gray-01-dark, #8e8e93);
+  text-align: right;
+
+  /* Default/Regular/Caption1 */
+  font-family: SF Pro Text;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+}
+.select_currency {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+  color: var(--gray-01-dark, #8e8e93);
+  text-align: right;
+
+  /* Default/Regular/Caption1 */
+  font-family: SF Pro Text;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px; /* 133.333% */
+}
+#gold_price {
+  /* Default/Bold/Title1 */
+  font-family: SF Pro Display;
+  font-size: 28px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.36px;
+  background: var(
+    --Yellow-gradient,
+    linear-gradient(93deg, #f5ea99 -3.52%, #db9b45 100%)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+#main_info_currencylogo {
+  display: flex;
+  padding: 4px 8px;
+  align-items: center;
+  gap: 12px;
+  border-radius: 16px;
+  background: var(
+    --Gray-gradient,
+    linear-gradient(302deg, #1c1c1e 0%, #48484a 100%)
+  );
+}
+#main_info_product_price {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 16px;
+  color: var(--White, #ececec);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #3a3a3c;
+
+  /* Default/Regular/Title3 */
+  font-family: SF Pro Display;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 120% */
+  letter-spacing: 0.38px;
+}
+#choose_color {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  width: 100%;
+}
+#choose_color > p {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Headline */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+}
+.variant {
+  width: 80px;
+  height: 80px;
+  border-radius: 16px;
+  /* border: 2px solid var(--Yellow-gradient, #f5ea99); */
+  opacity: 50%;
+}
+.color_variants {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 8px;
+  align-self: stretch;
+}
+#stories {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  width: 100%;
+}
+#stories > p {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Headline */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+}
+.story_block {
+  width: 110px;
+  height: 110px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 16px;
+  border: 1px solid var(--Yellow-gradient, #f5ea99);
+  padding: 8px;
+}
+.story_block > div {
+  width: 100px;
+  height: 100px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  background: url(product_example.png), lightgray 50%;
+  background-size: cover;
+  padding: 8px;
+}
+.story_block > div > p {
+  color: #fff;
+
+  /* Default/Bold/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.5px;
+}
+#addon_info {
+  display: flex;
+  padding: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+  border-radius: 12px;
+  background: var(--gray-05-dark, #1c1c1e);
+  width: 100%;
+}
+#addon_info > p {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Headline */
+  font-family: SF Pro Text;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 22px; /* 129.412% */
+  letter-spacing: -0.408px;
+}
+#stats {
+  display: flex;
+  padding: 16px;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+  border-radius: 16px;
+  background: #2c2c2e;
+}
+.stats_row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.stats_row > p {
+  color: var(--white, #fff);
+
+  /* Default/Regular/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.24px;
+}
+.stats_points {
+  display: flex;
+  flex-direction: row;
+}
+#stats_inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  flex: 1 0 0;
+}
+.stats_point {
+  width: 8px;
+  height: 8px;
+  margin-left: 8px;
+  border-radius: 50%;
+  background-color: var(--Gray, #4b4b4b);
+}
+#functionality {
+  display: flex;
+  padding: 16px;
+  align-items: center;
+  gap: 8px;
+  width: 100%;
+  align-self: stretch;
+  border-radius: 16px;
+  background: #2c2c2e;
+  flex-direction: column;
+}
+.functionality_header {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 8px;
+  justify-content: space-between;
+}
+.functionality_header > p {
+  color: var(--White, #ececec);
+
+  /* Default/Bold/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.5px;
+}
+.functionality_content {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: left;
+  justify-content: space-between;
+  padding: 13px 16px;
+  color: var(--White, #ececec);
+
+  /* Default/Regular/Subheadline */
+  font-family: SF Pro Text;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px; /* 133.333% */
+  letter-spacing: -0.24px;
+}
+#add_to_cart {
+  display: flex;
+  padding: 8px 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  width: 100%;
+  align-self: stretch;
+  background: var(--gray-05-dark, #1c1c1e);
 }
