--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,13 @@ body {
 ::-webkit-scrollbar {
   display: none;
 }
-.level {
+/* .level {
   width: 376px;
-}
-.column {
+} */
+/* .column {
   display: flex;
   flex-direction: column;
-}
+} */
 #profile_avatar_tgLink {
   width: 100%;
   display: flex;
@@ -67,7 +67,9 @@ body {
   display: flex;
   flex-direction: row;
   align-self: stretch;
-  justify-content: center;
+  justify-content: space-between;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 .teletype_block {
   width: 120px;
@@ -335,7 +337,7 @@ body {
   width: 100%;
   display: flex;
   padding: 8px 16px;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 24px;
   align-self: stretch;
@@ -474,7 +476,6 @@ body {
 }
 .card {
   background: transparent;
-  margin: 8px;
 }
 .gold_button {
   display: flex;
